--- a/INFT2012Assignment/INFT2012Assignment.csproj
+++ b/INFT2012Assignment/INFT2012Assignment.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmOptions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmOptions.Designer.cs">
+      <DependentUpon>frmOptions.cs</DependentUpon>
+    </Compile>
     <Compile Include="Turn.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmNameInput.resx">
       <DependentUpon>frmNameInput.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmOptions.resx">
+      <DependentUpon>frmOptions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmScoreSet.resx">
       <DependentUpon>frmScoreSet.cs</DependentUpon>
