--- a/INFT2012Assignment/INFT2012Assignment.csproj
+++ b/INFT2012Assignment/INFT2012Assignment.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AI.cs" />
     <Compile Include="frmOptions.cs">
       <SubType>Form</SubType>
     </Compile>
